--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ flutter:
   uses-material-design: true
   assets:
     - data/city.list.json
+    - data/valid_cities.txt
   # To add assets to your application, add an assets section here, in
   # this "flutter" section, as in:
   # assets:
