--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,10 @@ dependencies:
     sdk: flutter
   http: '>=0.11.3+12'
 
+
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
